<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/item1txt3"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="23dp"
        android:text="@string/item2heading"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="117dp"
        android:layout_height="141dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/poteto" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="26dp"
        android:layout_height="31dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="27dp"
        android:layout_height="35dp"
        android:layout_marginStart="13dp"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/item2qty"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/item1txt3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="50dp"
        android:layout_height="22dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="44dp"
        android:text="@string/item2price"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_marginStart="213dp"
        android:layout_marginTop="54dp"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/bin" />

    <TextView
        android:id="@+id/head"
        android:layout_width="@dimen/topicWidth"
        android:layout_height="@dimen/topicHeight"
        android:background="@color/topiccolor"
        android:backgroundTint="#467A07"
        android:foregroundTint="#983F3F"
        android:text="@string/shopping_head"
        android:textAlignment="center"
        android:textColor="#E8DFDF"
        android:textSize="@dimen/topicText"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="117dp"
        android:layout_height="120dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/carrot" />

    <TextView
        android:id="@+id/item1txt"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:text="@string/item1_head"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/item1Qty"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/item1txt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="50dp"
        android:layout_height="22dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="29dp"
        android:text="@string/item1Price"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="26dp"
        android:layout_height="31dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="35dp"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_marginStart="213dp"
        android:layout_marginTop="54dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/bin" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="12dp"
        android:text="@string/totalval"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="53dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="214dp"
        android:backgroundTint="@color/btnpurches"
        android:text="@string/btnpurches"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="14dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

</androidx.constraintlayout.widget.ConstraintLayout>