<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="44dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:tint="@color/navicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:srcCompat="@drawable/baseline_person_search_24" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="68dp"
        android:text="@string/navinventory"
        android:textColor="@color/navtext"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="49dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:tint="@color/navicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@drawable/baseline_inventory_2_24" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        android:text="@string/navprofile"
        android:textColor="@color/navtext"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="47dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:tint="@color/navicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/baseline_home_24" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:tint="@color/navicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/baseline_payments_24" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="50dp"
        android:text="@string/navhome"
        android:textColor="@color/navtext"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="59dp"
        android:text="@string/navpayment"
        android:textColor="@color/navtext"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <View
        android:id="@+id/divider4"
        android:layout_width="1dp"
        android:layout_height="729dp"
        android:layout_marginTop="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="200dp"
        android:layout_height="57dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="1dp"
        android:background="#7E1919"
        android:backgroundTint="@color/topic"
        android:text="@string/navtopic"
        android:textAlignment="center"
        android:textColor="#F6F5F5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>